--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **AI BiasBuster: Detecting and Mitigating Bias in Text**\n",
+    "# **AI BiasBuster: Detecting Bias in Text**\n",
     "Welcome to the **AI BiasBuster** project! In this notebook, you will learn how to:\n",
     "1. Detect biases in text using a fine-tuned transformer model.\n",
     "2. Use the **WINOGENDER dataset** to train and evaluate your model.\n",
