model comparison for bias detection

--- a/main.ipynb
+++ b/main.ipynb
@@ -465,7 +465,7 @@
     "Fine-tuning involves taking a pre-trained model (like DistilBERT) and training it on a specific task (bias detection). This allows the model to adapt to your dataset while leveraging the knowledge it has already learned from vast amounts of text.\n",
     "\n",
     "### **What Will We Do in This Step?**\n",
-    "1. Load the pre-trained DistilBERT model.\n",
+    "1. Load the pre-trained model.\n",
     "2. Define training parameters.\n",
     "3. Fine-tune the model using the tokenized dataset.\n",
     "\n",
@@ -741,8 +741,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='3' max='216' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  3/216 00:00 < 01:38, 2.16 it/s, Epoch 0.03/3]\n",
+       "      <progress value='216' max='216' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [216/216 01:53, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -750,9 +750,40 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.147671</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>0.958904</td>\n",
+       "      <td>0.921053</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.374800</td>\n",
+       "      <td>0.002501</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.017400</td>\n",
+       "      <td>0.001639</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -762,6 +793,412 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating the model DistilBERT...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='18' max='18' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [18/18 00:01]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Metrics for DistilBERT: {'eval_loss': 0.001638591755181551, 'eval_accuracy': 1.0, 'eval_f1': 1.0, 'eval_precision': 1.0, 'eval_recall': 1.0, 'eval_runtime': 1.1235, 'eval_samples_per_second': 128.174, 'eval_steps_per_second': 16.022, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model and tokenizer for DistilBERT saved successfully!\n",
+      "Testing the model DistilBERT...\n",
+      "Input: The nurse said the doctor would see the patient soon.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9977388381958008}]\n",
+      "--------------------------------------------------\n",
+      "Input: The CEO welcomed the new male engineer.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9980390667915344}]\n",
+      "--------------------------------------------------\n",
+      "Input: She is a great leader and makes tough decisions.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9945642948150635}]\n",
+      "--------------------------------------------------\n",
+      "Input: The teacher said that he would grade the exams by tomorrow.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9982249140739441}]\n",
+      "--------------------------------------------------\n",
+      "Input: The firefighter saved the child from the burning building.\n",
+      "Prediction: [{'label': 'LABEL_1', 'score': 0.9908316731452942}]\n",
+      "--------------------------------------------------\n",
+      "Input: She is a nurse, and he is a doctor.\n",
+      "Prediction: [{'label': 'LABEL_1', 'score': 0.9973243474960327}]\n",
+      "--------------------------------------------------\n",
+      "Input: The programmer quickly fixed the critical bug.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.99764084815979}]\n",
+      "--------------------------------------------------\n",
+      "Completed processing for DistilBERT.\n",
+      "\n",
+      "Processing model: MiniLM\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22fb1a379521481bb86304f18e561314",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1152 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenization complete!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at microsoft/MiniLM-L12-H384-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "/Users/Senjuti/Library/Python/3.9/lib/python/site-packages/transformers/training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Training for MiniLM...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='216' max='216' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [216/216 02:52, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.464926</td>\n",
+       "      <td>0.826389</td>\n",
+       "      <td>0.834437</td>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>0.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.494100</td>\n",
+       "      <td>0.172251</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>0.955224</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.914286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.117800</td>\n",
+       "      <td>0.151448</td>\n",
+       "      <td>0.965278</td>\n",
+       "      <td>0.962963</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.928571</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating the model MiniLM...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='18' max='18' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [18/18 00:01]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Metrics for MiniLM: {'eval_loss': 0.15144790709018707, 'eval_accuracy': 0.9652777777777778, 'eval_f1': 0.9629629629629629, 'eval_precision': 1.0, 'eval_recall': 0.9285714285714286, 'eval_runtime': 1.3594, 'eval_samples_per_second': 105.927, 'eval_steps_per_second': 13.241, 'epoch': 3.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model and tokenizer for MiniLM saved successfully!\n",
+      "Testing the model MiniLM...\n",
+      "Input: The nurse said the doctor would see the patient soon.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9750238656997681}]\n",
+      "--------------------------------------------------\n",
+      "Input: The CEO welcomed the new male engineer.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9748661518096924}]\n",
+      "--------------------------------------------------\n",
+      "Input: She is a great leader and makes tough decisions.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.958255410194397}]\n",
+      "--------------------------------------------------\n",
+      "Input: The teacher said that he would grade the exams by tomorrow.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9752674698829651}]\n",
+      "--------------------------------------------------\n",
+      "Input: The firefighter saved the child from the burning building.\n",
+      "Prediction: [{'label': 'LABEL_1', 'score': 0.9763633012771606}]\n",
+      "--------------------------------------------------\n",
+      "Input: She is a nurse, and he is a doctor.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9732117056846619}]\n",
+      "--------------------------------------------------\n",
+      "Input: The programmer quickly fixed the critical bug.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.9750931262969971}]\n",
+      "--------------------------------------------------\n",
+      "Completed processing for MiniLM.\n",
+      "\n",
+      "Processing model: TinyBERT\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2757f85ef15f4b19ab93a48023583b82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1152 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenization complete!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at huawei-noah/TinyBERT_General_4L_312D and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "/Users/Senjuti/Library/Python/3.9/lib/python/site-packages/transformers/training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Training for TinyBERT...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='216' max='216' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [216/216 01:04, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.670093</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.517857</td>\n",
+       "      <td>0.690476</td>\n",
+       "      <td>0.414286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.663800</td>\n",
+       "      <td>0.427787</td>\n",
+       "      <td>0.819444</td>\n",
+       "      <td>0.811594</td>\n",
+       "      <td>0.823529</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.395200</td>\n",
+       "      <td>0.329251</td>\n",
+       "      <td>0.888889</td>\n",
+       "      <td>0.890411</td>\n",
+       "      <td>0.855263</td>\n",
+       "      <td>0.928571</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating the model TinyBERT...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='18' max='18' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [18/18 00:00]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Metrics for TinyBERT: {'eval_loss': 0.329251229763031, 'eval_accuracy': 0.8888888888888888, 'eval_f1': 0.8904109589041096, 'eval_precision': 0.8552631578947368, 'eval_recall': 0.9285714285714286, 'eval_runtime': 0.618, 'eval_samples_per_second': 233.009, 'eval_steps_per_second': 29.126, 'epoch': 3.0}\n",
+      "Model and tokenizer for TinyBERT saved successfully!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing the model TinyBERT...\n",
+      "Input: The nurse said the doctor would see the patient soon.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.8646494746208191}]\n",
+      "--------------------------------------------------\n",
+      "Input: The CEO welcomed the new male engineer.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.8371856212615967}]\n",
+      "--------------------------------------------------\n",
+      "Input: She is a great leader and makes tough decisions.\n",
+      "Prediction: [{'label': 'LABEL_1', 'score': 0.8449221849441528}]\n",
+      "--------------------------------------------------\n",
+      "Input: The teacher said that he would grade the exams by tomorrow.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.8623989224433899}]\n",
+      "--------------------------------------------------\n",
+      "Input: The firefighter saved the child from the burning building.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.5256735682487488}]\n",
+      "--------------------------------------------------\n",
+      "Input: She is a nurse, and he is a doctor.\n",
+      "Prediction: [{'label': 'LABEL_0', 'score': 0.8334164023399353}]\n",
+      "--------------------------------------------------\n",
+      "Input: The programmer quickly fixed the critical bug.\n",
+      "Prediction: [{'label': 'LABEL_1', 'score': 0.7845878601074219}]\n",
+      "--------------------------------------------------\n",
+      "Completed processing for TinyBERT.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
